--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -438,7 +438,7 @@
             <a href="11. Government.jpeg" target="_blank">
               <img src="11. Government.jpeg" class="thumb" alt="The announcement">
             </a>
-            <figcaption>Former student leaders, now President and Ministers: Camila Vallejo, Giorgio Jackson, and Gabriel Boric<br><small><em>(Diario UChile)</em></small></figcaption>
+            <figcaption>Former student leaders, now Ministers and President: Giorgio Jackson, Camila Vallejo, and Gabriel Boric<br><small><em>(Diario UChile)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
@@ -530,13 +530,29 @@
         </div>
           <div class="col-sm-6 col-md-4 mb-4">
           <figure>
+            <a href="12. Presos Revuelta.jpeg" target="_blank">
+              <img src="12. Presos Revuelta.jpeg" class="thumb" alt="Presos">
+            </a>
+            <figcaption>Outisde the assembly 2<br><small><em>(La Izquierda Diario)</em></small></figcaption>
+          </figure>
+        </div>
+   <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="12. Guitarra.jpeg" target="_blank">
+              <img src="12. Guitarra.jpeg" class="thumb" alt="Saumerio">
+            </a>
+            <figcaption>Nicolás Muñoz<br><small><em>(Agencia Uno)</em></small></figcaption>
+          </figure>
+        </div>
+           <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
             <a href="12. Proposal.jpeg" target="_blank">
               <img src="12. Proposal.jpeg" class="thumb" alt="Saumerio">
             </a>
             <figcaption>The first proposal<br><small><em>(Marcelo Hernandez/Getty Images)</em></small></figcaption>
           </figure>
         </div>
-   </div>
+    </div>
          </section>
 
 
