--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -168,7 +168,15 @@
             <figcaption>Jaime Guzmán<br><small><em>(Emol)</em></small></figcaption>
           </figure>
         </div>  
-      </div>
+         <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="2. Comision Ortuzar.jpeg" target="_blank">
+              <img src="2. Comision Ortuzar.jpeg" class="thumb" alt="2005">
+            </a>
+            <figcaption>Comisión Ortúzar<br><small><em>(Emol)</em></small></figcaption>
+          </figure>
+        </div>  
+    </div>
     </section>
 
 
@@ -704,7 +712,7 @@
             <a href="16. Comite Tecnico de Admisibilidad.jpeg" target="_blank">
               <img src="16. Comite Tecnico de Admisibilidad.jpeg" class="thumb" alt="Consejo Constitucional pleno">
             </a>
-            <figcaption>Comité Técnico de Admisibilidad<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
+            <figcaption>Technical Admisibility Committee<br><small><em>(Procesoconstitucional.cl)</em></small></figcaption>
           </figure>
         </div>
       <div class="col-sm-6 col-md-4 mb-4">
@@ -712,7 +720,7 @@
             <a href="16.1. Consejo Constitucional Expertos.jpeg" target="_blank">
               <img src="16.1. Consejo Constitucional Expertos.jpeg" class="thumb" alt="Consejo Constitucional Expertos">
             </a>
-            <figcaption>Consejo Constitucional Expertos<br><small><em>(La Tercera)</em></small></figcaption>
+            <figcaption>Experts Committee<br><small><em>(La Tercera)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
