--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -173,7 +173,15 @@
             <a href="2. Comision Ortuzar.jpeg" target="_blank">
               <img src="2. Comision Ortuzar.jpeg" class="thumb" alt="2005">
             </a>
-            <figcaption>Comisión Ortúzar<br><small><em>(Emol)</em></small></figcaption>
+            <figcaption>Comisión Ortúzar<br><small><em>(Fundación Jaime Guzmán)</em></small></figcaption>
+          </figure>
+        </div>  
+         <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="2. Pleb1988.jpeg" target="_blank">
+              <img src="2. Pleb1988.jpeg" class="thumb" alt="1988">
+            </a>
+            <figcaption>1988 Plebescite<br><small><em>(Alvaro Hoppe Guiñez)</em></small></figcaption>
           </figure>
         </div>  
     </div>
