--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -209,6 +209,14 @@
             <figcaption>Milton Friedman with Augusto Pinochet (1975)<br><small><em>(Norberto Barreto / La Ventana Rota)</em></small></figcaption>
           </figure>
         </div>
+        <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="3. Kissinger.jpeg" target="_blank">
+              <img src="3. Kissinger.jpeg" class="thumb" alt="Kissinger">
+            </a>
+            <figcaption>Henry Kissinger with Augusto Pinochet (1976)<br><small><em>(Wikimedia Commons)</em></small></figcaption>
+          </figure>
+        </div>
       </div>
     </section>
 
