--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -181,7 +181,7 @@
             <a href="2. Pleb1988.jpeg" target="_blank">
               <img src="2. Pleb1988.jpeg" class="thumb" alt="1988">
             </a>
-            <figcaption>1988 Plebescite<br><small><em>(Alvaro Hoppe Guiñez)</em></small></figcaption>
+            <figcaption>The 1988 Plebiscite<br><small><em>(Alvaro Hoppe Guiñez)</em></small></figcaption>
           </figure>
         </div>  
     </div>
