--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -99,12 +99,12 @@
     <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
       <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
       <div class="d-flex flex-wrap">
-        <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/">Book</a>
-        <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
-        <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://dataverse.harvard.edu/dataverse/theseus" target="_blank" rel="noopener noreferrer">Data</a>
-        <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Code</a>
-        <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/files/">Files</a>
-        <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/images/">Images</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/">Book</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/#chapters">Chapters</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/#resources">Data</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/#resources">Code</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/files/">Files</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="https://kennethbunker.github.io/theseus/images/">Images</a>
       </div>
     </div>
 
