--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -166,23 +166,27 @@
     <div class="subhead">Documents</div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Constitución (1980) – Art. 118: Quórums y LOC</span>
+        <span class="file-title">Constitution (1980)</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Constitución (1980) – Art. 45: Senado (designados y vitalicios)</span>
+        <span class="file-title">Constitution (1980) – Arts. 43: Electoral Rules (Binominal System)</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Constitución (1980) – Arts. 43 y 45: reglas electorales (binominal)</span>
+        <span class="file-title">Constitution (1980) – Art. 45: Electoral Rules (Senators)</span>
+        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+     <li class="item-row">
+        <span class="file-title">Constitution (1980) – Art. 118: Quórums and LOC</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Constitución Política de la República de Chile (1980; reformas 1989)</span>
+        <span class="file-title">Constitutional Reform Package 1989 (1989 Plebiscite)</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Paquete de reformas constitucionales de 1989 (plebiscito)</span>
+        <span class="file-title">Constitution (1980; v. 1989)</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
     </ul>
@@ -392,7 +396,16 @@
   <div class="inner mt-3">
 
     <div class="subhead">Documents</div>
-    <ul class="file-list"></ul>
+    <ul class="file-list">
+      <li class="item-row">
+        <span class="file-title">Constitution (1980; v. 2005)</span>
+        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Constitutional Reform Package 2005</span>
+        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+    </ul>
 
     <div class="subhead">Literature</div>
     <ul class="file-list">
@@ -487,7 +500,6 @@
       <li class="item-row">
         <span class="file-title">El Ladrillo (policy document)</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
-        <span class="file-meta">Foundational policy blueprint</span>
       </li>
     </ul>
 
