--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -170,19 +170,7 @@
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Constitution (1980) – Arts. 43: Electoral Rules (Binominal System)</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
-      </li>
-      <li class="item-row">
-        <span class="file-title">Constitution (1980) – Art. 45: Electoral Rules (Senators)</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
-      </li>
-     <li class="item-row">
-        <span class="file-title">Constitution (1980) – Art. 118: Quórums and LOC</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
-      </li>
-      <li class="item-row">
-        <span class="file-title">Constitutional Reform Package 1989 (1989 Plebiscite)</span>
+        <span class="file-title">Constitutional Reform Package 1989</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
@@ -498,7 +486,7 @@
     <div class="subhead">Documents</div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">El Ladrillo (policy document)</span>
+        <span class="file-title">El Ladrillo</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
     </ul>
@@ -650,9 +638,6 @@
   <div class="section-title">CHAPTER 6 – A shifting political system</div>
   <div class="inner mt-3">
 
-    <div class="subhead">Documents</div>
-    <ul class="file-list"></ul>
-
     <div class="subhead">Literature</div>
     <ul class="file-list">
       <li class="item-row">
@@ -800,15 +785,11 @@
     <div class="subhead">References</div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Author’s website. Lista de independientes que han competido en Chile.</span>
+        <span class="file-title">Author’s website.</span>
         <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">LINK</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Appendix – Ideological maps (Figures A1–A3).</span>
-        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">LINK</a>
-      </li>
-      <li class="item-row">
-        <span class="file-title">Servicio Electoral de Chile (Servel). Datos electorales.</span>
+        <span class="file-title">Servicio Electoral de Chile (Servel).</span>
         <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">LINK</a>
       </li>
     </ul>
@@ -824,9 +805,18 @@
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Chile – Laws 18.603, 20.900, 20.915 (regulation of political parties and re-registration requirements).</span>
+        <span class="file-title">Law 18.603</span>
         <a class="tiny-link" href="#" download>PDF</a>
       </li>
+          <li class="item-row">
+        <span class="file-title">Law 20.900</span>
+        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+          <li class="item-row">
+        <span class="file-title">Law 20.915</span>
+        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+      </li>
+
     </ul>
 
     <div class="subhead mt-3"><strong>Literature</strong></div>
