--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -890,7 +890,7 @@
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Bases Ciudadanas para la Nueva Constitución (Boletín 11.617-08).</span>
+        <span class="file-title">Constitutional Proposal (2018)</span>
         <a class="tiny-link" href="#" download>PDF</a>
       </li>
     </ul>
