--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -1255,6 +1255,10 @@
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
+        <span class="file-title">Constitutional Proposal (2022).</span>
+        <a class="tiny-link" href="#" download>PDF</a>
+      </li>
+      <li class="item-row">
         <span class="file-title">El mapa político no oficial de la Convención Constitucional de Tresquintos.</span>
         <a class="tiny-link" href="#" download>PDF</a>
       </li>
@@ -1275,6 +1279,8 @@
         <a class="tiny-link" href="#" download>PDF</a>
       </li>
     </ul>
+
+
 
     <div class="subhead mt-3"><strong>Literature</strong></div>
     <ul class="file-list">
@@ -1507,8 +1513,8 @@
     <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title"><em>Propuesta de Nueva Constitución (2023)</em>.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <span class="file-title">Constitutional Proposal (2023).</span>
+        <a class="tiny-link" href="#" download>PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title"><em>Roll-call votes in the Commissions of the Constitutional Council of Chile, 2023</em>. Dataset.</span>
@@ -1559,16 +1565,6 @@
 <section id="ch17" class="section-box">
   <div class="section-title"><strong>CHAPTER 17 – Coming to Terms: Why the Second Constitutional Process Failed</strong></div>
   <div class="inner mt-3">
-
-    <div class="subhead"><strong>Documents</strong></div>
-    <ul class="file-list">
-      <li class="item-row"><span class="file-title text-muted">—</span></li>
-    </ul>
-
-    <div class="subhead mt-3"><strong>Literature</strong></div>
-    <ul class="file-list">
-      <li class="item-row"><span class="file-title text-muted">—</span></li>
-    </ul>
 
     <div class="subhead mt-3"><strong>References</strong></div>
     <ul class="file-list">
