--- a/theseus/index.html
+++ b/theseus/index.html
@@ -99,7 +99,7 @@
 <div id="content">
   <div class="container">
 
-    
+
     <div style="display:inline-block;"><br><br>
 
       <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
@@ -147,10 +147,10 @@
         <div class="col-md-3 col-sm-6 mb-4 d-flex">
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title mb-1">Cover</h5>
-              <p class="card-text">High-res cover and title page</p>
+              <h5 class="card-title mb-1">Covers</h5>
+              <p class="card-text">High-res front and back covers</p>
               <div class="mt-auto">
-                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/img/book1.png" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
+                <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/Covers.pdf" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
             </div>
           </div>
