--- a/theseus/index.html
+++ b/theseus/index.html
@@ -148,7 +148,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Covers</h5>
-              <p class="card-text">High-res front and back covers</p>
+              <p class="card-text">High-res front and back</p>
               <div class="mt-auto">
                 <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/Covers.pdf" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
@@ -161,10 +161,10 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Frontmatter</h5>
-              <p class="card-text">Author’s preface.</p>
+              <p class="card-text">Preface, acknowledgments</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with actual PDF link -->
-                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
+                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
             </div>
           </div>
@@ -178,7 +178,7 @@
               <p class="card-text">Table of contents</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with your Dataverse collection or dataset -->
-                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
+                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
               <p class="card-text">Index and Appendix</p>
               <div class="mt-auto">
                 <!-- TODO: replace with repo or folder -->
-                <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
+                <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
               </div>
             </div>
           </div>
@@ -228,7 +228,6 @@
               <h5 class="card-title mb-1">Code</h5>
               <p class="card-text">r scripts.</p>
               <div class="mt-auto">
-                <!-- TODO: replace '#' with actual PDF link -->
                 <a class="btn btn-sm btn-outline-primary" href="https://github.com/kennethbunker/theseus" target="_blank" rel="noopener noreferrer">Github</a>
               </div>
             </div>
@@ -240,9 +239,8 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Files</h5>
-              <p class="card-text">Literature and historical documents</p>
+              <p class="card-text">Documents, literature, and references mentioned in the book</p>
               <div class="mt-auto">
-                <!-- TODO: replace '#' with your Dataverse collection or dataset -->
                 <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/files/" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
             </div>
@@ -254,9 +252,8 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Images</h5>
-              <p class="card-text">Historical photos</p>
+              <p class="card-text">Events and people mentioned in the book</p>
               <div class="mt-auto">
-                <!-- TODO: replace with repo or folder -->
                 <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/images/" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
             </div>
