--- a/theseus/index.html
+++ b/theseus/index.html
@@ -175,7 +175,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">TOC</h5>
-              <p class="card-text">Table of contents</p>
+              <p class="card-text">Table of contents (chapters, figures, tables)</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with your Dataverse collection or dataset -->
                 <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
