--- a/theseus/index.html
+++ b/theseus/index.html
@@ -161,7 +161,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Frontmatter</h5>
-              <p class="card-text">Preface, acknowledgments</p>
+              <p class="card-text">Preface, acknowledgment</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with actual PDF link -->
                 <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
@@ -175,7 +175,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">TOC</h5>
-              <p class="card-text">Table of contents (chapters, figures, tables)</p>
+              <p class="card-text">Table of contents</p>
               <div class="mt-auto">
                 <!-- TODO: replace '#' with your Dataverse collection or dataset -->
                 <a class="btn btn-sm btn-outline-primary" href="#" target="_blank" rel="noopener noreferrer">Download (PDF)</a>
@@ -239,7 +239,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Files</h5>
-              <p class="card-text">Documents, literature, and references mentioned in the book</p>
+              <p class="card-text">Documents, literature, and references</p>
               <div class="mt-auto">
                 <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/files/" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
@@ -252,7 +252,7 @@
           <div class="card flex-fill d-flex flex-column">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title mb-1">Images</h5>
-              <p class="card-text">Events and people mentioned in the book</p>
+              <p class="card-text">Events and people</p>
               <div class="mt-auto">
                 <a class="btn btn-sm btn-outline-primary" href="https://kennethbunker.github.io/theseus/images/" target="_blank" rel="noopener noreferrer">+ info</a>
               </div>
