--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -645,17 +645,13 @@
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Bunker, K. (2018). “La elección de 2017 y el fraccionamiento del sistema de partidos en Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em>, 9(2), 204–229.</span>
-        <a class="tiny-link" href="https://derechoycienciapolitica.uct.cl/index.php/RDCP/article/view/116" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Bunker, K. (2018). “La elección de 2017 y el fraccionamiento del sistema de partidos en Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em>, 9(2), 204–229.</span><a class="tiny-link" href="https://derechoycienciapolitica.uct.cl/index.php/RDCP/article/view/116" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Bunker, K. (2025a). Challenging conventional wisdom in new democracies: Social diversity, electoral rules, and party system fragmentation in Chile. <em>Election Law Journal: Rules, Politics, and Policy</em> (online first), 1–25.</span>
-        <a class="tiny-link" href="#
-        https://www.liebertpub.com/doi/10.1089/elj.2024.0064" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Bunker, K. (2025a). Challenging conventional wisdom in new democracies: Social diversity, electoral rules, and party system fragmentation in Chile. <em>Election Law Journal: Rules, Politics, and Policy</em> (online first), 1–25.</span><a class="tiny-link" href="https://www.liebertpub.com/doi/10.1089/elj.2024.0064" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Bunker, K. (2025b). Mapping party systems over time: A spatial distribution of ideological competition in Chile. <em>Journal of Political Ideologies</em> (online first), 1–18.</span>
-        <a class="tiny-link" href="https://www.tandfonline.com/doi/abs/10.1080/13569317.2025.2452179" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Bunker, K. (2025b). Mapping party systems over time: A spatial distribution of ideological competition in Chile. <em>Journal of Political Ideologies</em> (online first), 1–18.</span><a class="tiny-link" href="https://www.tandfonline.com/doi/abs/10.1080/13569317.2025.2452179" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Coppedge, M. (1998). “The evolution of Latin American party systems.” In S. Mainwaring & A. Valenzuela (eds.), <em>Politics, Society, and Democracy: Latin America</em> (pp. 172–206). Boulder: Westview Press.</span>
