--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -641,8 +641,7 @@
     <div class="subhead">Literature</div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Angell, A. (2003). “Party change in Chile in comparative perspective.” <em>Revista de Ciencia Política</em>, 23(2), 88–108.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Angell, A. (2003). “Party change in Chile in comparative perspective.” <em>Revista de Ciencia Política</em>, 23(2), 88–108.</span><a class="tiny-link" href="http://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0718-090X2003000200005" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Bunker, K. (2018). “La elección de 2017 y el fraccionamiento del sistema de partidos en Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em>, 9(2), 204–229.</span><a class="tiny-link" href="https://derechoycienciapolitica.uct.cl/index.php/RDCP/article/view/116" target="_blank" rel="noopener noreferrer">GO</a>
