--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -653,20 +653,19 @@
         <span class="file-title">Bunker, K. (2025b). Mapping party systems over time: A spatial distribution of ideological competition in Chile. <em>Journal of Political Ideologies</em> (online first), 1–18.</span><a class="tiny-link" href="https://www.tandfonline.com/doi/abs/10.1080/13569317.2025.2452179" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Coppedge, M. (1998). “The evolution of Latin American party systems.” In S. Mainwaring & A. Valenzuela (eds.), <em>Politics, Society, and Democracy: Latin America</em> (pp. 172–206). Boulder: Westview Press.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Coppedge, M. (1998). “The evolution of Latin American party systems.” In S. Mainwaring & A. Valenzuela (eds.), <em>Politics, Society, and Democracy: Latin America</em> (pp. 172–206). Boulder: Westview Press.</span><a class="tiny-link" href="https://www.routledge.com/Politics-Society-And-Democracy-Latin-America/Mainwaring-Valenzuela/p/book/9780813337265?srsltid=AfmBOooUbOFP1i7F-mulBmWjc3bguUbntEm6frEuSh2NxONSWIz6ewOr" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Clark, W. R.; Golder, M. (2006). “Rehabilitating Duverger’s theory: Testing the mechanical and strategic modifying effects of electoral laws.” <em>Comparative Political Studies</em>, 39(6), 679–708.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://journals.sagepub.com/doi/10.1177/0010414005278420" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Cox, G. W. (1997). <em>Making Votes Count: Strategic Coordination in the World’s Electoral Systems</em>. Cambridge: Cambridge University Press.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.cambridge.org/core/books/making-votes-count/42CD9425E1410457FFC5079EC851F32B" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Crisp, B. F.; Olivella, S.; Potter, J. D. (2012). “Electoral contexts that impede voter coordination.” <em>Electoral Studies</em>, 31(1), 143–158.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.sciencedirect.com/science/article/pii/S0261379411001107" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Deegan-Krause, K. (2007). “New dimensions of political cleavage.” In R. J. Dalton & H.-D. Klingemann (eds.), <em>The Oxford Handbook of Political Behavior</em> (pp. 538–556). Oxford: Oxford University Press.</span>
