--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -199,11 +199,11 @@
       </li>
       <li class="item-row">
         <span class="file-title">Fuentes, C. (2013). <em>El fraude: Crónica sobre el plebiscito de la Constitución de 1980</em>. Santiago: Hueders.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://books.google.it/books/about/El_fraude.html?id=R9W4EAAAQBAJ&redir_esc=y" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Godoy, Ó. (1999). La transición chilena a la democracia: pactada. <em>Revista de Estudios Públicos</em>, 15, 79–106.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.estudiospublicos.cl/index.php/cep/article/view/967" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Guzmán, E. (1993). Reflexiones sobre el sistema binominal. <em>Estudios Públicos</em>, 51, 303–324.</span>
@@ -215,14 +215,14 @@
       </li>
       <li class="item-row">
         <span class="file-title">Huneeus, C. (Ed.). (2006). <em>La reforma al sistema binominal en Chile: Propuestas para el debate</em>. Santiago: Catalonia.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.libreriacatalonia.cl/la-reforma-al-sistema-binominal-en-chile" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Magar, E.; Rosenblum, M. R.; Samuels, D. (1998). On the absence of centripetal incentives in double-member districts: The case of Chile. <em>Comparative Political Studies</em>, 31(6), 714–739.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Magar, E.; Rosenblum, M. R.; Samuels, D. (1998). "On the absence of centripetal incentives in double-member districts: The case of Chile." <em>Comparative Political Studies</em>, 31(6), 714–739.</span>
+        <a class="tiny-link" href="https://journals.sagepub.com/doi/10.1177/0010414098031006002" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Nohlen, D. (2006). La reforma del sistema binominal desde una perspectiva comparada. <em>Revista de Ciencia Política</em>, 26(1), 191–202.</span>
+        <span class="file-title">Nohlen, D. (2006). "La reforma del sistema binominal desde una perspectiva comparada." <em>Revista de Ciencia Política</em>, 26(1), 191–202.</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
@@ -239,10 +239,6 @@
       </li>
     </ul>
 
-    <div class="subhead">References</div>
-    <ul class="file-list">
-      <li class="muted">None yet.</li>
-    </ul>
   </div>
 </section>
 
