--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -403,7 +403,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Bunker, K.; Navia, P. (2013). Latin American political outsiders, revisited: The case of Marco Enríquez-Ominami in Chile, 2009. <em>Journal of Politics in Latin America</em>, 5(2), 3–35.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://journals.sagepub.com/doi/full/10.1177/1866802X1300500201" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Cortés-Terzi, A. (2000). <em>Progresismo desafiado: Hegemonía y poder</em> (Vol. 36). Santiago: Centro de Estudios Avance.</span>
@@ -483,7 +483,7 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">El Ladrillo</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">PDF</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1iYznm46wfBfa74nIauaLICf79Fl9P7Sj/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
     </ul>
 
@@ -523,7 +523,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Kaiser, A. (2015). <em>La tiranía de la igualdad</em>. Santiago: El Mercurio/Aguilar.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.amazon.com/-/es/tiran%C3%ADa-igualdad-igualitarismo-progreso-sociedad/dp/8423426580" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Larraín, L. (2012). <em>El regreso del modelo</em>. Santiago: Libertad y Desarrollo.</span>
@@ -559,7 +559,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Universidad Andrés Bello, Instituto de Políticas Públicas. (2024). <em>Estudio UNAB de movilidad social multidimensional</em>. Santiago: Universidad Andrés Bello.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://ipp.unab.cl/movilidad-social-multidimensional/" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
     </ul>
 
