--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -665,7 +665,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Deegan-Krause, K. (2007). “New dimensions of political cleavage.” In R. J. Dalton & H.-D. Klingemann (eds.), <em>The Oxford Handbook of Political Behavior</em> (pp. 538–556). Oxford: Oxford University Press.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://academic.oup.com/edited-volume/28179" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Dix, R. H. (1989). “Cleavage structures and party systems in Latin America.” <em>Comparative Politics</em>, 22(1), 23–37.</span>
@@ -680,7 +680,7 @@
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Gamboa, R.; López, M.; Baeza, J. (2013). “La evolución programática de los partidos chilenos: 1970–2009: de la polarización al consenso.” <em>Revista de Ciencia Política</em>, 33(2), 443–467.</span>
+        <span class="file-title">Gamboa, R.; López, M. A.; Baeza, J. (2013). “La evolución programática de los partidos chilenos: 1970–2009: de la polarización al consenso.” <em>Revista de Ciencia Política</em>, 33(2), 443–467.</span>
         <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
@@ -709,7 +709,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Mainwaring, S. (ed.). (2018). <em>Party Systems in Latin America: Institutionalization, Decay, and Collapse</em>. New York, NY: Cambridge University Press.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.cambridge.org/core/books/party-systems-in-latin-america/A62FA6AE29245CAB328B2AEB45DD4D1A" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Mainwaring, S.; Scully, T. R. (eds.). (1995). <em>Building Democratic Institutions: Party Systems in Latin America</em>. Stanford: Stanford University Press.</span>
@@ -729,7 +729,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Neto, O. A.; Cox, G. W. (1997). “Electoral institutions, cleavage structures, and the number of parties.” <em>American Journal of Political Science</em>, 41(1), 149–174.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.jstor.org/stable/2111712" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Nohlen, D. (2005). <em>Elections in the Americas</em>. Oxford: Oxford University Press.</span>
@@ -737,7 +737,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Ordeshook, P. C.; Shvetsova, O. V. (1994). “Ethnic heterogeneity, district magnitude, and the number of parties.” <em>American Journal of Political Science</em>, 38, 100–123.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.jstor.org/stable/2111337" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Rae, D. (1968). <em>The Political Consequences of Electoral Laws</em>. New Haven: Yale University Press.</span>
@@ -753,7 +753,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Roussias, N. (2022). “The evolution of new party systems: Voter learning and electoral systems.” <em>Political Studies Review</em>, 20(3), 410–432.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://journals.sagepub.com/doi/10.1177/14789299211014394" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Scully, T. R. (1992). <em>Rethinking the Center: Party Politics in Nineteenth- and Twentieth-Century Chile</em>. Stanford: Stanford University Press.</span>
